# runtime

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  README_en.md  SECURITY.md  build.sh  classify_rule.yaml  install_deps.sh  version.cmake
example/3_memory_advanced/managed_memory/0_uvm_allocate/: CMakeLists.txt  README.md  main.cpp  run.sh
example/3_memory_advanced/managed_memory/0_uvm_allocate/scripts/: gen_data.py  verify_result.py
src/aicpu_sched/: CMakeLists.txt
src/aicpu_sched/aicpu_cust_schedule/: CMakeLists.txt
src/aicpu_sched/aicpu_cust_schedule/common/: aicpusd_sqe_adapter.cpp
src/aicpu_sched/aicpu_cust_schedule/core/: aicpusd_drv_manager.cpp  aicpusd_event_process.cpp  aicpusd_resource_limit.cpp  aicpusd_threads_process.cpp
src/aicpu_sched/aicpu_cust_schedule/core/cust_mc2_maintenance/: aicpu_cust_sd_mc2_maintenance_thread.cpp
src/aicpu_sched/aicpu_cust_schedule/core/cust_platform_info/: aicpu_cust_platform_info_process.cpp
src/aicpu_sched/aicpu_cust_schedule/core/dfx/: aicpu_cust_sd_dump_process.cpp  dump_task.cpp
src/aicpu_sched/aicpu_processer/: CMakeLists.txt  ae_kernel_lib_aicpu.cc  ae_kernel_lib_aicpu_kfc.cpp  ae_so_manager.cc
src/aicpu_sched/aicpu_prof/: CMakeLists.txt  prof_so_manager.cpp  profiling_adp.cc
src/aicpu_sched/aicpu_schedule/: CMakeLists.txt
src/aicpu_sched/aicpu_schedule/common/: aicpusd_common.h  aicpusd_hal_interface_ref.h  aicpusd_hccl_api.cpp  aicpusd_sqe_adapter.cpp  aicpusd_util.h
src/aicpu_sched/aicpu_schedule/common/ts_to_aicpu_msg_adapter/: ts_aicpu_msg_info_adapter.h
src/aicpu_sched/aicpu_schedule/core/: aicpusd_cust_so_manager.cpp  aicpusd_cust_so_manager.h  aicpusd_drv_manager.cpp  aicpusd_drv_manager.h  aicpusd_event_manager.cpp  aicpusd_event_manager.h  aicpusd_event_process.cpp  aicpusd_interface_process.cpp  aicpusd_meminfo_process.cpp  aicpusd_message_queue.cpp  aicpusd_message_queue.h  aicpusd_model.cpp  aicpusd_model_execute.cpp  aicpusd_msg_send.cpp  aicpusd_queue_event_process.cpp  aicpusd_queue_event_process.h  aicpusd_resource_limit.cpp  aicpusd_resource_manager.cpp  aicpusd_so_manager.cpp  aicpusd_so_manager.h  aicpusd_threads_process.cpp  aicpusd_worker.cpp  aicpusd_worker.h
src/aicpu_sched/aicpu_schedule/core/dfx/: aicpusd_cust_dump_process.cpp  aicpusd_lastword.cpp  aicpusd_monitor.cpp  dump_task.cpp  dump_task.h  dump_task_manager.cpp
src/aicpu_sched/aicpu_schedule/core/hwts_kernel/: hwts_kernel_common.cpp  hwts_kernel_cust_so.cpp  hwts_kernel_queue.cpp  hwts_kernel_register.cpp  hwts_kernel_soma.cpp
src/aicpu_sched/aicpu_schedule/core/operator_kernel/: operator_kernel_register.cpp
src/aicpu_sched/aicpu_schedule/datadump/: datadump_event_process.cpp
src/aicpu_sched/aicpu_schedule/execute/: main.cpp
src/aicpu_sched/aicpu_schedule/interface/: aicpusd_interface.cpp
src/aicpu_sched/aicpu_schedule/mc2_maintenance/: aicpusd_mc2_maintenance_thread.cpp
src/aicpu_sched/aicpu_schedule/proto/: op_mapping_info.proto
src/aicpu_sched/aicpu_schedule/statistic/: aicpusd_period_statistic.cpp  aicpusd_proc_mem_statistic.cpp
src/aicpu_sched/aicpu_schedule/stub/: host_cpu_scheduler.cpp  stub_transfer_dump.cpp
src/aicpu_sched/aicpu_schedule/stub/proc_mgr/: aicpusd_proc_mgr_sys_operator_agent.h
src/aicpu_sched/aicpu_sharder/: CMakeLists.txt  aicpu_timer.cpp
src/aicpu_sched/extern_include/: metadef_types.h  task_scheduler_error.h
src/dfx/adump/: CMakeLists.txt
src/dfx/adump/adcore/: CMakeLists.txt  adx_api.cpp
src/dfx/adump/adcore/common/: bound_queue_memory.h
src/dfx/adump/adcore/hdc/: hdc_api.cpp
src/dfx/adump/adump/: CMakeLists.txt  adx_dump_record.cpp  adx_dump_record.h
src/dfx/adump/adump/adump_ascend031/: ascend_dump.cmake
src/dfx/adump/adump/common/: adump_error_manager.h  file.cpp  file.h  json_parser.cpp  json_parser.h  str_utils.cpp  str_utils.h
src/dfx/adump/adump/device/: adx_datadump_server_soc.cpp  adx_dump_soc_helper.cpp
src/dfx/adump/adump/exception/: dfx_args_parser.cpp  dump_args.cpp  dump_args_callback.cpp  dump_args_callback.h  dump_file.cpp  dump_file.h  exception_dumper.cpp  exception_dumper.h  exception_info_common.cpp  exception_info_common.h  kernel_info_collector.cpp  kernel_info_collector.h  kernel_pc_fixer.cpp  kernel_pc_fixer.h  kernel_symbol_locator.cpp  kernel_symbol_locator.h
src/dfx/adump/adump/host/: adx_datadump_callback.cpp  adx_datadump_server.cpp
src/dfx/adump/adump/impl/: dump_config_converter.cpp  dump_config_converter.h  dump_memory.cpp
src/dfx/adump/adump/manage/: adump_api.cpp  adump_api_platform.cpp
src/dfx/adump/adump/operator/: kernel_dfx_dumper.cpp  kernel_dfx_dumper.h
src/dfx/adump/inc/adump/: adump_api.h
src/dfx/trace/awatchdog/: CMakeLists.txt  awatchdog_core.c  awatchdog_core.h  awatchdog_monitor.c  awatchdog_monitor.h
src/queue_schedule/: CMakeLists.txt
src/queue_schedule/client/: CMakeLists.txt
src/queue_schedule/common/: feature_ctrl_open.cpp
src/queue_schedule/common/hccl/: hccl_types.h  hccl_types_in.h
src/queue_schedule/dgwclient/: CMakeLists.txt  dgw_client.cpp
src/queue_schedule/server/: bind_relation.cpp  router_server.cpp  subscribe_manager.cpp
src/queue_schedule/server/config/: config_info_operator.cpp
tests/cmodel_test/local_cmodel_build/: CMakeLists.txt  driver_backend_shim.c
tests/cmodel_test/local_cmodel_build/include/model/: model_api.h
tests/cmodel_test/local_cmodel_build/include/tsch/: host_interface.h  task_scheduler.h  tsch_defines.h  tsch_interrupt.h
tests/ut/adump/adump_tiny/: CMakeLists.txt
tests/ut/adump/adump_tiny/testcase/: adump_api_platform_utest.cpp  adump_platform_api_device_utest.cpp  dump_printf_utest.cpp  hdc_api_stub_utest.cpp  operator_preliminary_device_utest.cpp  (+1 more)
tests/ut/aicpu_sched/simulator/: CMakeLists.txt
tests/ut/atrace/ut/: CMakeLists.txt
tests/ut/msprof/acp/: CMakeLists.txt
tests/ut/msprof/avp/: CMakeLists.txt
tests/ut/msprof/common/: CMakeLists.txt
tests/ut/msprof/msprofbin/: CMakeLists.txt
tests/ut/msprof/profapi/: CMakeLists.txt
tests/ut/msprof/stub_utest/: CMakeLists.txt
tests/ut/slog/ut/: CMakeLists.txt
(+2474 files in other folders)
